--- a/waybar-gruvbox/style.css
+++ b/waybar-gruvbox/style.css
@@ -1,3 +1,5 @@
+@import url("./colors.css");
+
 * {
     font-family: 'Noto Sans Mono', 'Font Awesome 6 Free', 'Font Awesome 6 Brands', monospace;
     font-size: 13px;
