--- a/waybar-gruvbox/style.css
+++ b/waybar-gruvbox/style.css
@@ -68,12 +68,14 @@ button:hover {
 #workspaces {
     margin: 0 4px;
     color: @foreground;
+    background-color: @background-darker;
+    box-shadow: inset 0 -3px @background;
 }
 
 #workspaces button.active {
-    background-color: @background;
+    background-color: @background-darker;
     color: @forground;
-    box-shadow: inset 0 -3px @purple;
+    box-shadow: inset 0 -3px @pink;
 } 
 #workspaces button:hover {
     background: @selection;
@@ -82,8 +84,9 @@ button:hover {
 }
 
 #workspaces button.focused {
-    background-color: @purple;
-    box-shadow: inset 0 -3px #ffffff;
+    background-color: @selection;
+    color: @foreground;
+    box-shadow: inset 0 -3px @purple;
 }
 
 
@@ -103,7 +106,7 @@ button:hover {
 #clock {
     padding: 1px 8px;
     background-color: @background;
-    color: @green;
+    color: @foreground;
 }
 
 #battery {
